Fix lightbox height for better readability

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -718,6 +718,7 @@ body.business-directory #TB_prev {
 body.business-directory #TB_caption {
     text-align: center;
     width: 70%;
+    height: auto;
 }
 
 body.business-directory #TB_closeWindow {
